huge rework, improvement, issue fixes, server deployment; solved or fixed issues: #61 #60 #59 #58 #57 #56 #55 #54 #53 #52 #50 #49 #48 #47 #46 #45 #42[only improved, not fixed] #39 #37 #31[deleted] #26[improved] #21 #8